# kalan

./: .env.example  .gitignore  BEFORE_AFTER_COMPARISON.md  DATABASE_SCHEMA_FIX.md  DATABASE_SETUP_SUMMARY.md  PAPER_CONTENT_IMPROVEMENT.md  PAPER_STORAGE_IMPLEMENTATION.md  PAPER_WRITING_FEATURE.md  PROJECT_STRUCTURE.md  QDRANT_DOCS_UPDATE.md  README.md  SIMPLIFIED_ARCHITECTURE.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  test_asyncpg.py  test_complete_paper_realistic.py  test_db_connection.py  test_ollama_integration.py  test_paper_saving.py  test_paper_writing.py  test_research_capabilities.py  test_research_content.py
alembic/versions/: 698c1e702669_initial_schema.py  b385e6b3f099_add_content_and_metadata_to_papers.py
config/: agent_templates.yaml  evaluation_rubrics.yaml  knowledge_graph.yaml
config/curricula/: deep_learning.yaml  machine_learning.yaml
data/: README.md
data/experiments/: .gitkeep
data/papers/: .gitkeep
data/seed_agents/: advanced.json  apprentices.json  practitioners.json
data/seed_knowledge/: advanced.json  core_ml.json  deep_learning.json  foundations.json
docs/: ARCHITECTURE.md  COMPLETE.txt  COMPLETION_SUMMARY.md  MANIFEST.md  MCP_SERVERS_COMPLETE.md  OLLAMA_QUICKREF.md  OLLAMA_SETUP.md  ORCHESTRATION_LAYER_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART_CHECKLIST.md  README.md  REFACTORING_COMPLETE.md  SCRIPTS_AND_CONFIG_COMPLETE.md  SETUP_GUIDE.md  STORAGE_LAYER_COMPLETE.md
reports/: .gitkeep  community_report_20251016_084237.txt  community_report_20251016_085541.txt  community_report_20251016_085933.txt  community_report_20251016_090533.txt  community_report_20251016_090959.txt  community_report_20251016_091453.txt  community_report_20251016_092408.txt  community_report_20251016_092939.txt  community_report_20251016_095130.txt  community_report_20251016_095404.txt
scripts/: analyze_community.py  check_neo4j_test.py  convert_papers_to_pdf.py  init_db.sql  run_simulation.py  seed_agents.py  seed_knowledge.py
src/: __init__.py
src/activities/: __init__.py  learning.py  research.py  review.py  teaching.py
src/core/: __init__.py  agent.py  evolution.py  knowledge.py  reputation.py
src/llm/: __init__.py  client.py  prompts.py  tools.py
src/mcp_servers/: __init__.py
src/orchestration/: __init__.py  community.py  events.py  matchmaking.py  workflows.py
src/storage/: __init__.py  document_store.py  graph_store.py  state_store.py  vector_store.py
src/utils/: config.py  (+4 more)
(+12 files in other folders)
